<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/layout_background"
            android:orientation="vertical"
            android:padding="@dimen/text_margin">

            <TextView
                android:id="@+id/tv_object_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/default_object_name"
                android:textColor="#03045E"
                android:textSize="18sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_map_pin_blue" />

                <TextView
                    android:id="@+id/tv_object_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/default_object_location"
                    android:textColor="#023E8A"
                    android:textSize="16sp" />

            </LinearLayout>

            <TextView
                android:id="@+id/tv_object_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/large_text"
                android:textColor="#023E8A"
                android:textSize="14sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>