<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.pages.profile.ProfilePage">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/image_user_photo"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="15dp" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@color/black" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="100dp">

                <EditText
                    android:id="@+id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/selector_authorization_input"
                    android:inputType="textPersonName"
                    android:paddingStart="@dimen/text_margin"
                    android:paddingLeft="@dimen/text_margin"
                    android:paddingRight="@dimen/text_margin"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginLeft="15dp"
                    android:background="@color/white"
                    android:paddingHorizontal="5dp"
                    android:text="@string/first_name"
                    android:textSize="12sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <Button
                android:id="@+id/button_save"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/selector_blue_button"
                android:text="Сохранить"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/reset_matches"
                android:textSize="22sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="30dp"
                android:text="@string/reset_matches_description"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_reset"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/selector_blue_button"
                android:text="@string/reset"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@color/black" />

            <Button
                android:id="@+id/button_exit"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="15dp"
                android:background="@drawable/selector_blue_button"
                android:text="@string/exit_account"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@null" />

            <View
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginVertical="30dp"
                android:background="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/delete_account"
                android:textColor="@color/red"
                android:textSize="19sp" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>