<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.main.profile.ProfileFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/layout_background"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="112dp"
                android:layout_marginTop="5dp"
                android:background="#FFFFFF"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_profile_image"
                    android:layout_width="64dp"
                    android:layout_height="64dp"
                    android:layout_marginStart="36dp"
                    android:layout_marginLeft="36dp"
                    android:layout_marginEnd="18dp"
                    android:layout_marginRight="18dp"
                    android:src="@mipmap/ic_launcher" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp">

                    <TextView
                        android:id="@+id/user_full_name_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tmp_full_name"
                        android:textSize="24sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/user_nickname_view"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/tmp_nickname"
                        android:textStyle="normal" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/text_margin"
                android:text="@string/large_text" />

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>